20100203
	appl/lib/cfg.b treat \r as white space (issue 69, 70)
20100115
	appl/cmd/tarfs.b man/4/tarfs changes to permission handling from mechiel [issue 220]
	appl/spree/mkfile add explicit -I$ROOT/module [issue 209, powerman]
20100110
	appl/cmd/tcs.b [issue 12, arvindht]: process unconverted bytes next cycle, flush conversion state; improve error checking
20091219
	change default roots in Nt utils to c:\inferno
20091215
	factotum(2) updated to include keyspec in signature
	appl/cmd/mount.b uses -k value as keyspec if -9 selected [not to much purpose with current factotum's p9any]
	bind(1) [for mount] updated to describe -k used for keyspec if -9 selected
20091214
	switch more commands to use dial(2)
	change emu/Linux/emu-g not to require X11 libs (again)
20091213
	temper the tendancy of port/dis.c to yield during idle gc: it's compensating for os scheduling, but yield less often
20091208
	add mkdir -p to makemk.sh to ensure output directories exist [issue 213]
20091127
	problems fixed in styxconv(2), which can now convert both ways [rog]
20091119
	emu/port/devfs-posix.c	missing waserror in dirread (obscure but possible failure)
20091007
	remove intermediate exception-raising function from charon implementation
20091004
	restore "keyring" to lib section of emu/Plan9/emu
20090930
	emu/*/ipif*.c make "hangup" act as in native Inferno; also delete unused so_setsockopt
	provide correct version of devmnt.c
20090928
	update import(4) to remove the restriction to Plan 9 (can use Inferno's own factotum)
	(emu os)^/port/devmnt.c fix from plan 9 (don't access vanished data)
20090830
	check subexp length in ed [cmbrannon79]
20090825
	add netmkaddr call to /appl/cmd/ftpfs.b; send errors to standard error
20090824
	delete unused (and somewhat incomplete) pin support
20090822
	in the what were we thinking dept: appl/cmd/touch.b and dis/touch.dis updated to avoid using an Arg after nil'ing it [thanks to cmbrannon]